crates/biome_js_parser/tests/js_test_suite/error/type_parameter_missing_elements.ts
type Foo<, A> = A;

type Foo<A, , B> = A & B;
